# Simulador-ocular

./: README.md  aruco__calibration__board__a4_8h_source.html  classaruco__test_1_1_cam_window.html  classaruco__test_1_1_face_window.html  classaruco__test_1_1_point3_d.html  index.html  instrucciones.txt
EmilioLópez-ArucoTest/: CMakeLists.txt  CMakeLists.txt~  CalibWindow.cpp  CalibWindow.hpp  CamWindow.cpp  CamWindow.hpp  FaceWindow.cpp  FaceWindow.hpp  HelpDialog.cpp  HelpDialog.hpp  Point3D.cpp  Point3D.hpp  SimulatorWindow.cpp  SimulatorWindow.hpp  TypeF.cpp  TypeF.hpp  TypeV.cpp  TypeV.hpp  aruco_simple.cpp~  aruco_test.cpp  aruco_test.hpp  help_button.hpp  main.cpp
EmilioLópez-ArucoTest/doc/: index.html
EmilioLópez-ArucoTest/glui_src/: arcball.cpp  example5.cpp  glui_add_controls.cpp  glui_bitmap_img_data.cpp  glui_bitmaps.cpp  glui_column.cpp  glui_commandline.cpp  glui_img_listbox_down.ppm  glui_img_listbox_up_dis.ppm  glui_mouse_iaction.cpp  glui_scrollbar.cpp  glui_separator.cpp  glui_spinner.cpp  glui_statictext.cpp
doc/: _calib_window_8cpp.html  _calib_window_8cpp__incl.map  _calib_window_8cpp__incl.md5  _calib_window_8hpp.html  _calib_window_8hpp__dep__incl.map  _calib_window_8hpp__dep__incl.md5  _calib_window_8hpp__incl.map  _calib_window_8hpp__incl.md5  _calib_window_8hpp_source.html  _cam_window_8cpp.html  _cam_window_8cpp__incl.map  _cam_window_8cpp__incl.md5  _cam_window_8hpp.html  _cam_window_8hpp__dep__incl.map  _cam_window_8hpp__dep__incl.md5  _cam_window_8hpp__incl.map  _cam_window_8hpp__incl.md5  _cam_window_8hpp_source.html  _face_window_8cpp.html  _face_window_8cpp__incl.dot  _face_window_8cpp__incl.map  _face_window_8cpp__incl.md5  _face_window_8hpp.html  _face_window_8hpp__dep__incl.map  _face_window_8hpp__dep__incl.md5  _face_window_8hpp__incl.map  _face_window_8hpp__incl.md5  _face_window_8hpp_source.html  _help_dialog_8cpp.html  _help_dialog_8cpp__incl.map  _help_dialog_8cpp__incl.md5  _help_dialog_8hpp.html  _help_dialog_8hpp__dep__incl.map  _help_dialog_8hpp__dep__incl.md5  _help_dialog_8hpp__incl.map  _help_dialog_8hpp__incl.md5  _help_dialog_8hpp_source.html  _point3_d_8cpp.html  _point3_d_8cpp__incl.map  _point3_d_8cpp__incl.md5  (+205 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_2.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  (+20 more)
simulador/: CalibWindow.cpp  CalibWindow.hpp  CamWindow.cpp  CamWindow.hpp  FaceWindow.cpp  FaceWindow.hpp  HelpDialog.cpp  HelpDialog.hpp  Point3D.cpp  Point3D.hpp  SimulatorWindow.cpp  SimulatorWindow.hpp  TypeF.cpp  TypeF.hpp  TypeV.cpp  TypeV.hpp  camera.yml  help_button.hpp  main.cpp
